--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 
                 <div class="container">
                     <div class="column">
-                        <h2>ALL</h2>
-                        <h2>TECH</h2>
-                        <h2>SCIENCE</h2>
-                        <h2>SPACE</h2>
+                        <a href="/patches"><h2>ALL</h2></a>
+                        <a href="/patches?category=tech"><h2>TECH</h2></a>
+                        <a href="/patches?category=science"><h2>SCIENCE</h2></a>
+                        <a href="/patches?category=space"><h2>SPACE</h2></a>
                     </div>
                     <div class="column">
-                        <h2>SOCIETY</h2>
-                        <h2>ENVIRONMENT</h2>
-                        <h2>CULTURE</h2>
-                        <h2>ECONOMY</h2>
+                        <a href="/patches?category=society"><h2>SOCIETY</h2></a>
+                        <a href="/patches?category=environment"><h2>ENVIRONMENT</h2></a>
+                        <a href="/patches?category=culture"><h2>CULTURE</h2></a>
+                        <a href="/patches?category=economy"><h2>ECONOMY</h2></a>
                     </div>
                 </div>
             </fieldset>
