--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
     </div>
 
     <div id="latest-updates-background">
-    <h1>Latest Patches</h1>
-    <div id="last-three-updates" class="three-updates-container">
-
-    </div>
+        <h1>Latest Patches</h1>
+        <div id="last-three-updates" class="three-updates-container"></div>
     </div>
 
     <footer class="footer">
