--- a/patches.html
+++ b/patches.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Press+Start+2P&family=Roboto:ital,wght@0,100..900;1,100..900&family=VT323&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Earth Patch Updates</title>
+    <link rel="icon" type="image/x-icon" href="./resources/img.png"/>
+    <title>Earth Patch Updates - Patches</title>
 </head>
 <body>
 <div class="crt">
