--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <form style="align-self: flex-start;">
             <fieldset style="border: 1px solid orange">
                 <legend style="text-align: right">Latest</legend>
-                <h2 id="latest-title">Mars Update Incoming</h2>
-                <span id="latest-update"></span>
-                <small id="latest-date"></small>
+                <h2 id="latest-title">Title</h2>
+                <span id="latest-update">Content</span>
+                <small id="latest-date">Date</small>
             </fieldset>
         </form>
         <form style="align-self: flex-start;">
