--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <h1 class="orangeGlow">Earth Patch Updates</h1>
-    <p class="whiteGlow">If Earth had patch notes, this would be the changelog.<br/>Keep up with real-world progress, one update at a time.</p>
+    <p class="whiteGlow">If Earth had patch notes, this would be the changelog.<br>Keep up with real-world progress, one update at a time.</p>
 
     <div id="updates">
         <form style="align-self: flex-start;">
