--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +15,7 @@
 <body>
 <div class="crt">
 
-    <header class="page-header">
+    <header class="header">
         <nav class="main-nav">
             <ul>
                 <li><a href="/" class="nav-link">HOME</a></li>
