--- a/patches.html
+++ b/patches.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="crt">
-    <header class="page-header">
+    <header class="header">
         <nav class="main-nav">
             <ul>
                 <li><a href="/" class="nav-link">HOME</a></li>
